# whatsapp-chatbot

./: .gitignore  pyproject.toml
app/: main.py
app/api/v1/: main.py
app/api/v1/router/: webhook.py
app/core/config/: config.py  logger_config.py
app/core/config/llm/: llm.py
app/core/config/llm/prompts/: message_classification.txt  prompt_loader.py
app/exceptions/: base.py  llm.py
app/schemas/: booking_status.py  user_intent.py
app/services/: agent.py  message.py
